<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_subjects"
            android:title="@string/nav_subjects"
            android:icon="@drawable/ic_book" />
        <item
            android:id="@+id/nav_downloads"
            android:title="@string/nav_downloads"
            android:icon="@drawable/ic_download" />
        <item
            android:id="@+id/nav_bookmarks"
            android:title="@string/nav_bookmarks"
            android:icon="@drawable/ic_bookmark" />
        <item
            android:id="@+id/nav_math"
            android:title="@string/nav_math"
            android:icon="@drawable/ic_math" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings"
            android:icon="@drawable/ic_settings" />
        <item
            android:id="@+id/nav_search"
            android:title="@string/nav_search"
            android:icon="@drawable/ic_search" />
    </group>
</menu>